--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
-    "lite-server": "^2.2.2"
+    "lite-server": "^2.2.2",
+    "phantomjs-prebuilt": "^2.1.14",
+    "qunit-phantomjs-runner": "^2.3.0"
   }
 }
