Add sinon based tests

--- a/ps_jasmine/bower.json
+++ b/ps_jasmine/bower.json
@@ -15,7 +15,8 @@
     "tests"
   ],
   "devDependencies": {
-    "jasmine-core": "jasmine#^2.6.2"
+    "jasmine-core": "jasmine#^2.6.2",
+    "sinon": "^2.3.5"
   },
   "dependencies": {
     "jquery": "^3.2.1"
