--- a/ps_jasmine/package.json
+++ b/ps_jasmine/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^6.0.46",
     "bower": "^1.8.0",
     "concurrently": "^3.2.0",
+    "jasmine-core": "^2.6.4",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
