Use LESS for style

--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,4 @@ ModelManifest.xml
 /MessageBoard/.idea/MessageBoard.iml
 /MessageBoard/.idea/modules.xml
 /MessageBoard/.idea/workspace.xml
+MessageBoard/Content/Site.min.css
