--- a/MessageBoard/MessageBoard.csproj
+++ b/MessageBoard/MessageBoard.csproj
@@ -220,10 +220,117 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Site.css">
+      <DependentUpon>Site.less</DependentUpon>
+    </Content>
+    <Content Include="Content\Site.min.css">
+      <DependentUpon>Site.css</DependentUpon>
+    </Content>
+    <Content Include="Content\Template\font-awesome\fontawesome-webfont.svg" />
+    <Content Include="Content\Template\img\arrow-down.png" />
+    <Content Include="Content\Template\img\arrow-right.png" />
+    <Content Include="Content\Template\img\ashok.jpg" />
+    <Content Include="Content\Template\img\bg_direction_nav.png" />
+    <Content Include="Content\Template\img\facebook.png" />
+    <Content Include="Content\Template\img\favicon\favicon.png" />
+    <Content Include="Content\Template\img\foot-quote.png" />
+    <Content Include="Content\Template\img\googleplus.png" />
+    <Content Include="Content\Template\img\linkedin.png" />
+    <Content Include="Content\Template\img\photos\1.jpg" />
+    <Content Include="Content\Template\img\photos\2.jpg" />
+    <Content Include="Content\Template\img\photos\3.jpg" />
+    <Content Include="Content\Template\img\photos\4.jpg" />
+    <Content Include="Content\Template\img\photos\5.jpg" />
+    <Content Include="Content\Template\img\photos\6.jpg" />
+    <Content Include="Content\Template\img\photos\7.jpg" />
+    <Content Include="Content\Template\img\photos\8.jpg" />
+    <Content Include="Content\Template\img\photos\s1.jpg" />
+    <Content Include="Content\Template\img\photos\s2.jpg" />
+    <Content Include="Content\Template\img\photos\s3.jpg" />
+    <Content Include="Content\Template\img\photos\s4.jpg" />
+    <Content Include="Content\Template\img\photos\s5.jpg" />
+    <Content Include="Content\Template\img\photos\s6.jpg" />
+    <Content Include="Content\Template\img\photos\s7.jpg" />
+    <Content Include="Content\Template\img\photos\s8.jpg" />
+    <Content Include="Content\Template\img\photos\tn_1.jpg" />
+    <Content Include="Content\Template\img\photos\tn_11.jpg" />
+    <Content Include="Content\Template\img\photos\tn_2.jpg" />
+    <Content Include="Content\Template\img\photos\tn_22.jpg" />
+    <Content Include="Content\Template\img\photos\tn_3.jpg" />
+    <Content Include="Content\Template\img\photos\tn_33.jpg" />
+    <Content Include="Content\Template\img\photos\tn_4.jpg" />
+    <Content Include="Content\Template\img\photos\tn_44.jpg" />
+    <Content Include="Content\Template\img\photos\tn_5.jpg" />
+    <Content Include="Content\Template\img\photos\tn_55.jpg" />
+    <Content Include="Content\Template\img\photos\tn_6.jpg" />
+    <Content Include="Content\Template\img\photos\tn_66.jpg" />
+    <Content Include="Content\Template\img\photos\tn_7.jpg" />
+    <Content Include="Content\Template\img\photos\tn_77.jpg" />
+    <Content Include="Content\Template\img\photos\tn_8.jpg" />
+    <Content Include="Content\Template\img\photos\tn_88.jpg" />
+    <Content Include="Content\Template\img\prettyPhoto\dark_rounded\btnNext.png" />
+    <Content Include="Content\Template\img\prettyPhoto\dark_rounded\btnPrevious.png" />
+    <Content Include="Content\Template\img\prettyPhoto\dark_rounded\contentPattern.png" />
+    <Content Include="Content\Template\img\prettyPhoto\dark_rounded\default_thumbnail.gif" />
+    <Content Include="Content\Template\img\prettyPhoto\dark_rounded\loader.gif" />
+    <Content Include="Content\Template\img\prettyPhoto\dark_rounded\sprite.png" />
+    <Content Include="Content\Template\img\prettyPhoto\dark_square\btnNext.png" />
+    <Content Include="Content\Template\img\prettyPhoto\dark_square\btnPrevious.png" />
+    <Content Include="Content\Template\img\prettyPhoto\dark_square\contentPattern.png" />
+    <Content Include="Content\Template\img\prettyPhoto\dark_square\default_thumbnail.gif" />
+    <Content Include="Content\Template\img\prettyPhoto\dark_square\loader.gif" />
+    <Content Include="Content\Template\img\prettyPhoto\dark_square\sprite.png" />
+    <Content Include="Content\Template\img\prettyPhoto\default\default_thumb.png" />
+    <Content Include="Content\Template\img\prettyPhoto\default\loader.gif" />
+    <Content Include="Content\Template\img\prettyPhoto\default\sprite.png" />
+    <Content Include="Content\Template\img\prettyPhoto\default\sprite_next.png" />
+    <Content Include="Content\Template\img\prettyPhoto\default\sprite_prev.png" />
+    <Content Include="Content\Template\img\prettyPhoto\default\sprite_x.png" />
+    <Content Include="Content\Template\img\prettyPhoto\default\sprite_y.png" />
+    <Content Include="Content\Template\img\prettyPhoto\facebook\btnNext.png" />
+    <Content Include="Content\Template\img\prettyPhoto\facebook\btnPrevious.png" />
+    <Content Include="Content\Template\img\prettyPhoto\facebook\contentPatternBottom.png" />
+    <Content Include="Content\Template\img\prettyPhoto\facebook\contentPatternLeft.png" />
+    <Content Include="Content\Template\img\prettyPhoto\facebook\contentPatternRight.png" />
+    <Content Include="Content\Template\img\prettyPhoto\facebook\contentPatternTop.png" />
+    <Content Include="Content\Template\img\prettyPhoto\facebook\default_thumbnail.gif" />
+    <Content Include="Content\Template\img\prettyPhoto\facebook\loader.gif" />
+    <Content Include="Content\Template\img\prettyPhoto\facebook\sprite.png" />
+    <Content Include="Content\Template\img\prettyPhoto\light_rounded\btnNext.png" />
+    <Content Include="Content\Template\img\prettyPhoto\light_rounded\btnPrevious.png" />
+    <Content Include="Content\Template\img\prettyPhoto\light_rounded\default_thumbnail.gif" />
+    <Content Include="Content\Template\img\prettyPhoto\light_rounded\loader.gif" />
+    <Content Include="Content\Template\img\prettyPhoto\light_rounded\sprite.png" />
+    <Content Include="Content\Template\img\prettyPhoto\light_square\btnNext.png" />
+    <Content Include="Content\Template\img\prettyPhoto\light_square\btnPrevious.png" />
+    <Content Include="Content\Template\img\prettyPhoto\light_square\default_thumbnail.gif" />
+    <Content Include="Content\Template\img\prettyPhoto\light_square\loader.gif" />
+    <Content Include="Content\Template\img\prettyPhoto\light_square\sprite.png" />
+    <Content Include="Content\Template\img\quote-blue.png" />
+    <Content Include="Content\Template\img\quote-green.png" />
+    <Content Include="Content\Template\img\quote-red.png" />
+    <Content Include="Content\Template\img\rss.png" />
+    <Content Include="Content\Template\img\twitter.png" />
+    <Content Include="Content\Template\style\blue.css" />
+    <Content Include="Content\Template\style\bootstrap-responsive.css" />
+    <Content Include="Content\Template\style\bootstrap.css" />
+    <Content Include="Content\Template\style\ddlevelsmenu-base.css" />
+    <Content Include="Content\Template\style\ddlevelsmenu-topbar.css" />
+    <Content Include="Content\Template\style\flexslider.css" />
+    <Content Include="Content\Template\style\font-awesome-ie7.css" />
+    <Content Include="Content\Template\style\font-awesome.css" />
+    <Content Include="Content\Template\style\green.css" />
+    <Content Include="Content\Template\style\prettyPhoto.css" />
+    <Content Include="Content\Template\style\red.css" />
+    <Content Include="Content\Template\style\style.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <None Include="compilerconfig.json" />
+    <None Include="compilerconfig.json.defaults">
+      <DependentUpon>compilerconfig.json</DependentUpon>
+    </None>
+    <None Include="Content\Site.less" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -231,6 +338,9 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Template\font-awesome\fontawesome-webfont.eot" />
+    <Content Include="Content\Template\font-awesome\fontawesome-webfont.ttf" />
+    <Content Include="Content\Template\font-awesome\fontawesome-webfont.woff" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
