More CSS tweaks

--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,4 @@ ModelManifest.xml
 /MessageBoard/.idea/modules.xml
 /MessageBoard/.idea/workspace.xml
 MessageBoard/Content/Site.min.css
+MessageBoard/Content/Site.css
