--- a/MessageBoard/MessageBoard.csproj
+++ b/MessageBoard/MessageBoard.csproj
@@ -1173,6 +1173,8 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Templates\newTopicView.html" />
+    <Content Include="Templates\topicsView.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
