--- a/MessageBoard/MessageBoard.csproj
+++ b/MessageBoard/MessageBoard.csproj
@@ -1174,6 +1174,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Templates\newTopicView.html" />
+    <Content Include="Templates\singleTopicView.html" />
     <Content Include="Templates\topicsView.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
