--- a/MessageBoard.Test/MessageBoard.Test.csproj
+++ b/MessageBoard.Test/MessageBoard.Test.csproj
@@ -102,6 +102,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Controllers\HomeControllerTests.cs" />
+    <Compile Include="Fakes\FakeMessageBoardRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\TopicsController.cs" />
   </ItemGroup>
