--- a/MessageBoard/MessageBoard.csproj
+++ b/MessageBoard/MessageBoard.csproj
@@ -364,6 +364,7 @@
       <DependentUpon>compilerconfig.json</DependentUpon>
     </None>
     <None Include="Content\Site.less" />
+    <Content Include="js\app.js" />
     <Content Include="js\homeIndex.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
